# Fastdustry

./: Cargo.toml  README.md  bitbucket-pipelines.yml  types.toml
components/: Cargo.toml
components/src/: game_rules.rs  lib.rs  team.rs
fdapi/components/: Cargo.toml
fdapi/components/src/: lib.rs  position.rs  team.rs  unit.rs
fdapi/content/: Cargo.toml
fdapi/content/src/: block.rs  floor.rs  fluid.rs  item.rs  lib.rs  player_info.rs  registry.rs  team.rs  tile.rs  unit.rs  unit_type.rs
fdapi/content/src/components/: identifier.rs  mod.rs  position.rs  unit_type.rs
fdapi/content/src/system/: mod.rs
fdapi/demo/: Cargo.toml
fdapi/demo/src/: main.rs
fdapi/proto/: Cargo.toml  packets.toml
fdapi/proto/src/: lib.rs
fdapi/proto/src/contract/: mod.rs  packets.rs  streams.rs
fdapi/proto/src/contract/packets/: admin_request_packet.rs  announce_packet.rs  assembler_drone_spawned_packet.rs  assembler_unit_spawned_packet.rs  auto_door_toggle_packet.rs  begin_break_packet.rs  begin_place_packet.rs  block_snapshot_packet.rs  build_destroyed_packet.rs  building_control_select_packet.rs  buildings_health_update_packet.rs  clear_items_packet.rs  client_packet_reliable_packet.rs  client_packet_unreliable_packet.rs  client_snapshot_packet.rs  connect_confirm_packet.rs  connect_packet.rs  construct_finish_packet.rs  create_bullet_packet.rs  create_weather.rs  mod.rs  stream_begin.rs  stream_chunk.rs  update_gameover_packet.rs  warning_toast_packet.rs  world_data_begin.rs
fdapi/proto/src/contract/streams/: mod.rs  stream_packet.rs  world_stream.rs
fdapi/system/: UpdatePosition.rs
logic/: Cargo.toml
proto/: Cargo.toml  packets.toml
proto/src/: lib.rs  packets.rs
proto/src/contract/: packets.rs
scripts/: setup-git.sh
