[package]
name = "fastdustry-components"
version = "0.0.1"
authors = ["OSPx", "Ademun", "SSTentacleSS"]
description = "A module that implements basic Mindustry components"

[lib]
name = "components"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
palette = "0.7.2"
nalgebra = "0.32.3"
flagset = "0.4.3"
property = "0.3.3"
serde = { version = "1.0.177", features = ["derive", "alloc"], optional = true }

[features]
serde = [
  "dep:serde",
  "palette/serde",
  "nalgebra/serde",
  "nalgebra/serde-serialize",
  "flagset/serde",
]
