[package]
name = "fastdustry-logic"
version = "0.0.1"
authors = ["OSPx", "Ademun", "SSTentacleSS"]
description = "A module that implements basic Mindustry components logic"

[lib]
name = "logic"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
fdapi-components = { path = "../components" }
specs = { version = "0.19.0", default-features = false, features = [
  "specs-derive",
] }
