[package]
name = "fastdustry-api"
version = "0.0.1"
authors = ["OSPx", "Ademun", "SSTentacleSS"]
description = "A module that implements basic Mindustry data prototypes"

[lib]
name = "fdapi"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
unique-type-id-derive = "1.2.0"
unique-type-id = "1.2.0"
bytebuffer = "2.1.1"
nom = "7.1.3"