[package]
name = "fastdustry-components"
version = "0.0.1"
authors = ["OSPx", "Ademun", "SSTentacleSS"]
description = "A module that implements basic Mindustry components"

[lib]
name = "components"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
specs = { version = "0.19.0", features = ["specs-derive"] }
palette = { version = "0.7.2" }
nalgebra = { version = "0.32.3" }
serde = { version = "1.0.177", features = ["derive", "alloc"], optional = true }

[features]
serde = [
  "dep:serde",
  "palette/serde",
  "nalgebra/serde",
  "nalgebra/serde-serialize",
]
parallel = [
  "specs/parallel"
]
