[package]
name = "fastdustry-content"
version = "0.0.1"
authors = ["OSPx", "Ademun", "SSTentacleSS"]
description = "A module that implements basic Mindustry content"

[lib]
name = "content"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.163", features = ["derive"] }
vectora = "0.8.1"
