[package]
name = "fastdustry-content"
version = "0.0.1"
authors = ["OSPx", "Ademun", "SSTentacleSS"]
description = "A module that implements basic Mindustry content"

[lib]
name = "content"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
brood = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
palette = { version = "0.7.2", features = ["serde"] }
nalgebra = { version = "0.32.2", features = ["serde", "serde-serialize"] }
