[package]
name = "fastdustry-proto"
version = "0.0.1"
authors = ["OSPx", "Ademun", "SSTentacleSS"]
description = "A module that implements basic Mindustry low-level data prototypes"

[lib]
name = "proto"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
vectora = "0.8.1"
fastdustry-content = { path = "../content" }
unique-type-id-derive = "1.2.0"
unique-type-id = "1.2.0"
bytebuffer = "2.1.1"
base64 = "0.21.1"