[package]
name = "fastdustry-proto"
version = "0.0.1"
authors = ["OSPx", "Ademun", "SSTentacleSS"]
description = "A module that implements basic Mindustry low-level data prototypes"

[lib]
name = "proto"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
fastdustry-content = { path = "../content" }
bytebuffer = "2.1.1"
vectora = "0.8.1"
base64 = "0.21.1"